--- a/config.properties
+++ b/config.properties
@@ -3,4 +3,4 @@ mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.host=smtp.gmail.com
 mail.smtp.username=example@username.com
-mail.smtp.password=password
+mail.smtp.password=passwordtest
