--- a/config.properties
+++ b/config.properties
@@ -2,5 +2,5 @@ mail.smtp.starttls.enable=true
 mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.host=smtp.gmail.com
-mail.smtp.username=example@username.com
-mail.smtp.password=passwordtest
+mail.smtp.username=sophie.song@activeeon.com
+mail.smtp.password=M1$$T0kyo
